# chat-blog

./: .gitignore  LICENSE  README.md  blog_rag.py  chat_ui.py  diagnose_scores.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
blog_pages/: summary.md
blog_pages/posts/: about-blog-summary.md  automate-tasks.md  blockchain-learning.md  book-on-browser-network.md  build-optimization.md  centos7-owncloud.md  chat-blog-rag-app.md  cmd-line-colors.md  comparing-ai-generators.md  convex-db-self-host.md  ergo-blockchain.md  firefox-ext-yt-hide.md  git-pull-from-shell.md  homelab-alternative-to-cloud.md  math-d3-visualisation.md  proxmox-for-dokploy.md  router-opnsense.md  sensor-push-notification.md  summary.md  unit-tests-angular.md
vector_db/: chroma.sqlite3
