[project]
name = "rag-blog-pages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "markdown>=3.10.2",
    "numba>=0.63.1",
    "sentence-transformers>=5.2.2",
    "unstructured>=0.18.31",
]
